force-app/main/default/objects/RGC_Collaboration__c/RGC_Collaboration__c.object-meta.xml
<CustomObject>
    <description>Object used to provide information on RGC collaborations for Platform Active users</description>
    <label>RGC Collaboration Detail</label>
    <nameField>
        <displayFormat>RGC-Collaboration-{000}</displayFormat>
        <label>RGC Collaboration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Collaboration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>