force-app/main/default/objects/RGC_Collaboration__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator Institution Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RGC Collaboration Details</relationshipLabel>
    <relationshipName>RGC_Collaboration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>