force-app/main/default/objects/RGC_Collaboration__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RCA - Research Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>MTA - Material Transfer Agreements</fullName>
            </value>
            <value>
                <fullName>SA - Sequencing Agreement</fullName>
            </value>
            <value>
                <fullName>DSA - Data Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>RSA - Results Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>CA - Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>FA - Funding Agreement</fullName>
            </value>
            <value>
                <fullName>MCRU - Master Clinical Research Unit Agreement</fullName>
            </value>
            <value>
                <fullName>RPI - Regeneron Pharmaceuticals, Inc</fullName>
            </value>
            <value>
                <fullName>Consort - Consortium Agreement</fullName>
            </value>
            <value>
                <fullName>External Dataset</fullName>
            </value>
            <value>
                <fullName>RCA - Other</fullName>
            </value>
            <value>
                <fullName>Other Agreement Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>