force-app/main/default/objects/RGC_Collaboration__c/fields/Cohort_Description__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Description__c</fullName>
    <label>Cohort Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>