force-app/main/default/objects/RGC_Collaboration__c/fields/Collaboration_Description_Other__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Description_Other__c</fullName>
    <label>Collaboration Disease Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>