force-app/main/default/objects/RGC_Collaboration__c/fields/Collaboration_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity_ID__c</fullName>
    <label>Collaboration Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>