force-app/main/default/objects/RGC_Collaboration__c/fields/Collaboration_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity_Name__c</fullName>
    <label>Collaboration Opportunity Name</label>
    <type>TextArea</type>
</CustomField>