force-app/main/default/objects/RGC_Collaboration__c/fields/Collaboration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Stage__c</fullName>
    <label>Collaboration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- Early Discussions</fullName>
            </value>
            <value>
                <fullName>2- Due Diligence</fullName>
            </value>
            <value>
                <fullName>3- Research &amp; Ops Planning</fullName>
            </value>
            <value>
                <fullName>4- Agreement</fullName>
            </value>
            <value>
                <fullName>5- Collaboration Signoff</fullName>
            </value>
            <value>
                <fullName>6- Signatures &amp; Execution</fullName>
            </value>
            <value>
                <fullName>7- Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>