force-app/main/default/objects/RGC_Collaboration__c/fields/Collaborator_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Institution_Name__c</fullName>
    <label>Collaborator Institution Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>