force-app/main/default/objects/RGC_Collaboration__c/fields/Country_of_Sample_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Sample_Origin__c</fullName>
    <label>Country of Sample Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>