force-app/main/default/objects/RGC_Collaboration__c/fields/Health_System__c.field-meta.xml
<CustomField>
    <fullName>Health_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health System</label>
    <type>Checkbox</type>
</CustomField>