force-app/main/default/objects/RGC_Collaboration__c/fields/Link_to_Data_Dictionary__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Data_Dictionary__c</fullName>
    <description>Link URL for dictionary data.</description>
    <label>Link to Data Dictionary</label>
    <type>Url</type>
</CustomField>