force-app/main/default/objects/RGC_Collaboration__c/fields/Link_to_DNAnexus_Project__c.field-meta.xml
<CustomField>
    <fullName>Link_to_DNAnexus_Project__c</fullName>
    <description>link to the DNAnexus project data.</description>
    <label>Link to DNAnexus Project</label>
    <type>Url</type>
</CustomField>