force-app/main/default/objects/RGC_Collaboration__c/fields/Primary_Collaboration_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Collaboration_Type__c</fullName>
    <label>Primary Collaboration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Founder/Special Population</fullName>
            </value>
            <value>
                <fullName>Health System</fullName>
            </value>
            <value>
                <fullName>Large Population</fullName>
            </value>
            <value>
                <fullName>Mendelian</fullName>
            </value>
            <value>
                <fullName>Phenotype-Specific</fullName>
            </value>
            <value>
                <fullName>Strategic Initiatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>