force-app/main/default/objects/RGC_Collaboration__c/fields/Primary_TAG_Team__c.field-meta.xml
<CustomField>
    <fullName>Primary_TAG_Team__c</fullName>
    <label>Primary TAG Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>CVD/F</fullName>
            </value>
            <value>
                <fullName>FSP</fullName>
            </value>
            <value>
                <fullName>I/O</fullName>
            </value>
            <value>
                <fullName>I&amp;I</fullName>
            </value>
            <value>
                <fullName>M&amp;M</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Ophthal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>