force-app/main/default/objects/RGC_Collaboration__c/fields/Primary_TFABiology__c.field-meta.xml
<CustomField>
    <fullName>Primary_TFABiology__c</fullName>
    <label>Primary TFA/Biology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Cardiovascular/Fibrosis</fullName>
            </value>
            <value>
                <fullName>Immune &amp; Respiratory</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases</fullName>
            </value>
            <value>
                <fullName>Muscle &amp; Metabolism</fullName>
            </value>
            <value>
                <fullName>Neurosciences</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Other TFA/Biology</fullName>
            </value>
            <value>
                <fullName>Skeletal Diseases</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>