force-app/main/default/objects/RGC_Collaboration__c/fields/Research_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Link__c</fullName>
    <label>Research Plan Link</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>