force-app/main/default/objects/RGC_Collaboration__c/fields/Specific_Aims__c.field-meta.xml
<CustomField>
    <fullName>Specific_Aims__c</fullName>
    <label>Specific Aims</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>