force-app/main/default/objects/RGC_Collaboration__c/fields/Study_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Study_Rationale__c</fullName>
    <label>Study Rationale</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>