force-app/main/default/objects/RGC_Collaboration__c/fields/Terms_and_Policies__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Policies__c</fullName>
    <label>Terms and Policies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarantine</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
            <value>
                <fullName>Phenotype Restriction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>