force-app/main/default/objects/RGC_Collaboration__c/fields/Total_Committed__c.field-meta.xml
<CustomField>
    <fullName>Total_Committed__c</fullName>
    <label>Total # Committed</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>