force-app/main/default/objects/RGC_Collaboration__c/listViews/Executed_Agreements.listView-meta.xml
<ListView>
    <fullName>Executed_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Collaboration_Opportunity_Name__c</columns>
    <columns>Collaborator_Institution_Name__c</columns>
    <columns>Collaboration_Status__c</columns>
    <columns>Collaborator_Key__c</columns>
    <columns>Total_Committed__c</columns>
    <columns>Collaboration_Description_Other__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Collaboration_Stage__c</field>
        <operation>equals</operation>
        <value>7- Active</value>
    </filters>
    <filters>
        <field>Agreement_Type__c</field>
        <operation>equals</operation>
        <value>RCA - Research Collaboration Agreement,SA - Sequencing Agreement</value>
    </filters>
    <filters>
        <field>Total_Committed__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Executed Agreements</label>
</ListView>