force-app/main/default/objects/RGC_Collaboration__c/listViews/Potential_Agreemnets.listView-meta.xml
<ListView>
    <fullName>Potential_Agreemnets</fullName>
    <columns>NAME</columns>
    <columns>Collaboration_Description_Other__c</columns>
    <columns>Collaboration_Opportunity_Name__c</columns>
    <columns>Collaborator_Institution_Name__c</columns>
    <columns>Total_Committed__c</columns>
    <columns>Specific_Aims__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Collaboration_Stage__c</field>
        <operation>notEqual</operation>
        <value>7- Active</value>
    </filters>
    <filters>
        <field>Collaboration_Status__c</field>
        <operation>equals</operation>
        <value>Potential</value>
    </filters>
    <label>Potential Agreemnets</label>
</ListView>